fix: 修复 table_info 遗留 bug